[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pendragondi-api-pro" 
version = "1.0.2"
description = "Context-rich duplicate detection (non-AI)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="JinPendragon", email="pendragondi@pendragondi.dev"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pendragondi-api-pro = "pendragondi_api_pro.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["pendragondi_api_pro"]
