[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pendragondi-api-pro"
version = "1.0.3"
description = "PendragonDI API Pro: Context-rich duplicate detection (non-AI)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="jinpendragon", email="pendragondi@pendragondi.dev"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["pendragondi_api_pro"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
