[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pendragon-pro"
version = "1.0.0"
description = "Context-rich duplicate detection with event logging and reporting."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "jinpendragon", email = "pendragondi@pendragondi.dev" }]
license = { file = "LICENSE" }
dependencies = ["typer>=0.9.0"]

[project.urls]
Repository = "https://github.com/PendragonDI/pendragon-api-pro-v1"

[project.scripts]
pendragon-pro = "pendragon_pro.cli:app"
